--- a/index.html
+++ b/index.html
@@ -68,6 +68,37 @@
       </div>
     </header>
 
+    <!-- About -->
+    <section id="about" class="about bg-light py-5">
+      <div class="container">
+        <div class="text-center">
+          <h4 class="text-uppercase fw-bold text-primary">About Me</h4>
+          <hr class="w-25 mx-auto" />
+          <h2 class="mb-4">Let me introduce myself.</h2>
+        </div>
+        <div class="about-content d-flex gap-5 align-items-start h-100">
+          <img src="images/35147.jpeg" alt="" class="about-img img-fluid rounded-circle" />
+          <div>
+            <p class="lead">
+              I am a highly experienced and passionate full-stack web developer based in the vibrant
+              city of Bandung, Indonesia. With an extensive coding journey spanning over two
+              decades, I have honed my skills and expertise to deliver top-notch web solutions. My
+              coding odyssey commenced with the dynamic realm of web technologies, mastering HTML,
+              CSS, JavaScript, and PHP.
+            </p>
+            <p class="lead">
+              Having contributed my skills to various companies, I bring a wealth of professional
+              experience to every project. My commitment to excellence and a keen eye for detail
+              have been instrumental in the success of numerous web applications. I find immense
+              satisfaction in assisting individuals and businesses alike in building web
+              applications that not only meet their technical requirements but also enhance their
+              overall quality of life.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
