--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               aria-valuemin="0"
               aria-valuemax="100"
             >
-              <div class="progress-bar" style="width: 100%">100%</div>
+              <div class="progress-bar" style="width: 100%">5/5</div>
             </div>
 
             <h5><i class="fas fa-check"></i> CSS</h5>
@@ -159,7 +159,7 @@
               aria-valuemin="0"
               aria-valuemax="100"
             >
-              <div class="progress-bar" style="width: 90%">90%</div>
+              <div class="progress-bar" style="width: 90%">4.5/5</div>
             </div>
 
             <h5><i class="fas fa-check"></i> JavaScript</h5>
@@ -170,7 +170,7 @@
               aria-valuemin="0"
               aria-valuemax="100"
             >
-              <div class="progress-bar" style="width: 90%">90%</div>
+              <div class="progress-bar" style="width: 90%">4.5/5</div>
             </div>
 
             <h5><i class="fas fa-check"></i> Bootstrap</h5>
@@ -181,7 +181,7 @@
               aria-valuemin="0"
               aria-valuemax="100"
             >
-              <div class="progress-bar" style="width: 100%">100%</div>
+              <div class="progress-bar" style="width: 100%">5/5</div>
             </div>
 
             <h5><i class="fas fa-check"></i> PHP</h5>
@@ -192,7 +192,7 @@
               aria-valuemin="0"
               aria-valuemax="100"
             >
-              <div class="progress-bar" style="width: 75%">75%</div>
+              <div class="progress-bar" style="width: 80%">4/5</div>
             </div>
 
             <h5><i class="fas fa-check"></i> Python</h5>
@@ -203,7 +203,7 @@
               aria-valuemin="0"
               aria-valuemax="100"
             >
-              <div class="progress-bar" style="width: 70%">70%</div>
+              <div class="progress-bar" style="width: 70%">3.5/5</div>
             </div>
 
             <h5><i class="fas fa-check"></i> UI/UX</h5>
@@ -214,7 +214,7 @@
               aria-valuemin="0"
               aria-valuemax="100"
             >
-              <div class="progress-bar" style="width: 70%">70%</div>
+              <div class="progress-bar" style="width: 70%">3.5/5</div>
             </div>
           </div>
         </div>
@@ -225,6 +225,70 @@
               >Hire Me Now</a
             >
             <a href="#" class="btn btn-dark btn-lg text-uppercase px-5 mx-3 my-2">Download CV</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Portfolio -->
+    <section class="portfolio py-5 bg-light">
+      <div class="container">
+        <div class="text-center mb-5">
+          <h4 class="text-uppercase fw-bold text-primary">Portfolio</h4>
+          <hr class="w-25 mx-auto" />
+          <h2 class="mb-4">Check Out My Work</h2>
+          <p class="lead">Here is a small sample of my projects.</p>
+        </div>
+        <div class="row">
+          <div class="col-md-6 mb-4">
+            <div class="project shadow-lg rounded-5">
+              <a
+                href="images/project1.jpg"
+                data-lightbox="images"
+                data-title="Cliboard Landing Page"
+              >
+                <img src="images/project1.jpg" alt="" class="img-fluid rounded-3" />
+              </a>
+            </div>
+          </div>
+          <div class="col-md-6 mb-4">
+            <div class="project shadow-lg rounded-5">
+              <a
+                href="images/project2.jpg"
+                data-lightbox="images"
+                data-title="Loop Studios Website"
+              >
+                <img src="images/project2.jpg" alt="" class="img-fluid rounded-3" />
+              </a>
+            </div>
+          </div>
+          <div class="col-md-6 mb-4">
+            <div class="project shadow-lg rounded-5">
+              <a href="images/project3.jpg" data-lightbox="images" data-title="Shortly Website">
+                <img src="images/project3.jpg" alt="" class="img-fluid rounded-3" />
+              </a>
+            </div>
+          </div>
+          <div class="col-md-6 mb-4">
+            <div class="project shadow-lg rounded-5">
+              <a href="images/project4.jpg" data-lightbox="images" data-title="Flyo Website">
+                <img src="images/project4.jpg" alt="" class="img-fluid rounded-3" />
+              </a>
+            </div>
+          </div>
+          <div class="col-md-6 mb-4">
+            <div class="project shadow-lg rounded-5">
+              <a href="images/project5.jpg" data-lightbox="images" data-title="Bookmark Website">
+                <img src="images/project5.jpg" alt="" class="img-fluid rounded-3" />
+              </a>
+            </div>
+          </div>
+          <div class="col-md-6 mb-4">
+            <div class="project shadow-lg rounded-5">
+              <a href="images/project6.jpg" data-lightbox="images" data-title="Grid Layout">
+                <img src="images/project6.jpg" alt="" class="img-fluid rounded-3" />
+              </a>
+            </div>
           </div>
         </div>
       </div>
