--- a/index.html
+++ b/index.html
@@ -362,6 +362,56 @@
       </div>
     </section>
 
+    <!-- Stats -->
+    <section class="stats py-5 text-bg-secondary">
+      <div class="container">
+        <div class="row g-0">
+          <div class="col-md-4 col-lg-2">
+            <div class="stat text-center border-end border-dark">
+              <i class="fas fa-users fa-3x mb-3"></i>
+              <p class="fs-1">100+</p>
+              <h3 class="fs-6 text-uppercase">Clients</h3>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-2">
+            <div class="stat text-center border-end border-dark">
+              <i class="fas fa-project-diagram fa-3x mb-3"></i>
+              <p class="fs-1">200+</p>
+              <h3 class="fs-6 text-uppercase">Projects</h3>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-2">
+            <div class="stat text-center border-end border-dark">
+              <i class="fas fa-clock fa-3x mb-3"></i>
+              <p class="fs-1">20+</p>
+              <h3 class="fs-6 text-uppercase">Years</h3>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-2">
+            <div class="stat text-center border-end border-dark">
+              <i class="fas fa-book fa-3x mb-3"></i>
+              <p class="fs-1">5</p>
+              <h3 class="fs-6 text-uppercase">Publications</h3>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-2">
+            <div class="stat text-center border-end border-dark">
+              <i class="fas fa-computer fa-3x mb-3"></i>
+              <p class="fs-1">2M+</p>
+              <h3 class="fs-6 text-uppercase">Users</h3>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-2">
+            <div class="stat text-center border-end border-dark">
+              <i class="fas fa-graduation-cap fa-3x mb-3"></i>
+              <p class="fs-1">1K+</p>
+              <h3 class="fs-6 text-uppercase">Students</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
